# robot-monitor-graphics

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md
docs/: CMakeLists.txt  index.html
docs/api/: README_8md.html  angle__unit_8hpp.html  angle__unit_8hpp.js  angle__unit_8hpp_source.html  annotated.html  annotated_dup.js  assert_8hpp.html  assert_8hpp.js  assert_8hpp_source.html  bitmap_8hpp.html  bitmap_8hpp.js  bitmap_8hpp_source.html  classes.html  classrmg_1_1Bitmap-members.html  classrmg_1_1Bitmap.html  classrmg_1_1Bitmap.js  classrmg_1_1Context-members.html  classrmg_1_1Context.html  classrmg_1_1Context.js  classrmg_1_1Context__inherit__graph.map  classrmg_1_1Context__inherit__graph.md5  classrmg_1_1Cube3D-members.html  classrmg_1_1Cube3D.html  classrmg_1_1Cube3D.js  classrmg_1_1Cube3D__inherit__graph.map  classrmg_1_1Cube3D__inherit__graph.md5  classrmg_1_1Cylinder3D-members.html  classrmg_1_1Cylinder3D.html  classrmg_1_1Cylinder3D.js  classrmg_1_1Cylinder3D__inherit__graph.map  classrmg_1_1Cylinder3D__inherit__graph.md5  classrmg_1_1Font-members.html  classrmg_1_1Font.html  classrmg_1_1Font.js  classrmg_1_1KeyboardEvent-members.html  classrmg_1_1KeyboardEvent.html  classrmg_1_1KeyboardEvent.js  classrmg_1_1KeyboardEvent__inherit__graph.map  classrmg_1_1KeyboardEvent__inherit__graph.md5  classrmg_1_1Line3D-members.html  (+507 more)
docs/api/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  (+85 more)
docs/example/: tutorial0.cpp  tutorial1.cpp  tutorial2.cpp
docs/images/: component.dia  vertex.odg
docs/pages/api/: getting_started.dox  header.html  header.js  install.dox  install_ubuntu.dox  install_windows.dox  lighting.dox  main.dox  math_analysis.dox  math_euler_mat.dox  math_lighting.dox  style.css  transform.dox  transform_euler_mat.dox  transform_projection.dox  tutorial1.dox  tutorial2.dox  tutorial3.dox
include/: CMakeLists.txt  README.md  doxyfile
include/rmg/: assert.hpp  assert.inc  bitmap.hpp  color.hpp  context.hpp  cube.hpp  cylinder.hpp  font.hpp  keyboard.hpp  line3d.hpp  material.hpp  math.hpp  mesh.hpp  model.hpp  mouse.hpp  object.hpp  object2d.hpp  object3d.hpp  particle.hpp  rmg.hpp  sphere.hpp  sprite.hpp  text-alignment.hpp  text2d.hpp  text_alignment.hpp  texture.hpp  window.hpp
include/rmg/internal/: context_load.hpp  font_load.hpp  general_shader.hpp  line3d_shader.hpp  particle_shader.hpp  shader.hpp  shadow_map_shader.hpp  sprite_shader.hpp  texture_load.hpp  vbo_load.hpp
include/rmg/math/: angle_unit.hpp  euler.hpp  mat3.hpp  mat3.inc  mat4.hpp  mat4.inc  plane_equation.hpp  vec.hpp  vec2.hpp  vec2.inc  vec3.hpp  vec3.inc  vec4.hpp  vec4.inc
src/: CMakeLists.txt  assert.cpp  bitmap.cpp  bitmap_png.cpp  bitmap_tiff.cpp  camera.cpp  color.cpp  config.h.in  config.hpp.in  context_container.cpp  context_render.cpp  context_renderer.cpp  context_resource.cpp  context_world.cpp  cube.cpp  cylinder.cpp  font.cpp  keyboard.cpp  line3d.cpp  material.cpp  mesh.cpp  mesh_indices.cpp  mesh_normals.cpp  mouse.cpp  object.cpp  object2d.cpp  object3d.cpp  object3d_obj.cpp  particle.cpp  rmg  sphere.cpp  sprite.cpp  text2d.cpp  window.cpp  wxcanvas.cpp
src/base/: CMakeLists.txt  assert.inc  bitmap.cpp  bitmap_png.cpp  bitmap_tiff.cpp  camera.cpp  color.cpp  context_container.cpp  context_renderer.cpp  context_world.cpp  cube.cpp  cube.hpp  cylinder.cpp  font.cpp  font.hpp  keyboard.cpp  keyboard.hpp  line3d.cpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  mesh_indices.cpp  mesh_normals.cpp  mouse.cpp  mouse.hpp  object.cpp  object.hpp  object2d.cpp  object2d.hpp  object3d.cpp  object3d.hpp  object3d_obj.cpp  particle.cpp  rmg.hpp  sphere.cpp  sprite.cpp  text2d.cpp  text2d.hpp
src/base/internal/: context_load.cpp  general_shader.cpp  glcontext.cpp  line3d_shader.cpp  object2d_shader.cpp  particle_shader.cpp  shader.cpp  shader.hpp  shader_def.h  shadow_map_shader.cpp  shadow_map_shader.hpp  sprite_load.cpp  sprite_shader.cpp  texture_load.cpp  texture_load.hpp  vbo_load.cpp  vbo_load.hpp
src/base/math/: euler.cpp  euler.hpp  mat3.cpp  mat3.hpp  mat4.cpp  ostream.cpp  plane_equation.hpp  vec2.hpp  vec3.cpp  vec3.hpp  vec4.cpp
src/base/rmg/: alignment.hpp  bitmap.hpp  camera.hpp  color.hpp  context.hpp  cylinder.hpp  font.hpp  keyboard.hpp  line3d.hpp  material.hpp  math.hpp  mesh.hpp  mouse.hpp  object.hpp  object2d.hpp  object3d.hpp  particle.hpp  rmg.hpp  sphere.hpp  sprite.hpp  text2d.hpp  text_alignment.hpp
src/base/util/: linked_list.cpp  string.cpp
src/config/: config.h  config.h.in
src/internal/: context_load.cpp  general_shader.cpp  line3d_shader.cpp  particle_shader.cpp  shader.cpp  shadow_map_shader.cpp  sprite_shader.cpp  texture_load.cpp  vbo_load.cpp
src/math/: euler.cpp  mat3.cpp  mat4.cpp  ostream.cpp  vec3.cpp  vec4.cpp
src/rmg/: assert.hpp  assert.inc  bitmap.hpp  camera.hpp  color.hpp  context.hpp  cube.hpp  cylinder.hpp  font.hpp  keyboard.hpp  line3d.hpp  material.hpp  mesh.hpp  mouse.hpp  object.hpp  object2d.hpp  object3d.hpp  particle.hpp  sphere.hpp  sprite.hpp  text2d.hpp  window.hpp  wxcanvas.hpp
src/rmg/internal/: context_load.hpp  general_shader.hpp  line3d_shader.hpp  (+6 more)
src/window/: CMakeLists.txt  window.cpp
src/wx/: CMakeLists.txt  wxcanvas.cpp  wxcanvas.hpp
test/: CMakeLists.txt  config.h.in  googletest  test.cpp  test_config.h
test/resources/: graycat.tif  open_tif_rgb.tif
test/system/: CMakeLists.txt  window.cpp
test/unit/: bitmap.cpp  camera.cpp  context_container.cpp  context_world.cpp  cube.cpp  cylinder.cpp  euler.cpp  line3d.cpp  mat3.cpp  mat4.cpp  mesh.cpp  object.cpp  object2d.cpp  object3d.cpp  sphere.cpp  vec2.cpp  vec3.cpp  vec4.cpp  window.cpp
(+77 files in other folders)
